--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
   <version>0.0.1-SNAPSHOT</version>
   <name>version-check</name>
   <description>Demo project for Spring Boot</description>
+  <packaging>war</packaging>
 
   <properties>
     <java.version>11</java.version>
@@ -25,6 +26,11 @@
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
+    <dependency>
+      <groupId>org.springframework.boot</groupId>
+      <artifactId>spring-boot-starter-tomcat</artifactId>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
